# django-recurrence

./: Pipfile  README.md  README.rst  pyproject.toml
recurrence/: base.py  choices.py  fields.py  forms.py  managers.py
recurrence/locale/de/LC_MESSAGES/: django.mo  django.po
recurrence/locale/en/LC_MESSAGES/: django.po
recurrence/locale/es/LC_MESSAGES/: django.mo  django.po
recurrence/locale/eu/LC_MESSAGES/: django.mo  django.po
recurrence/locale/fr/LC_MESSAGES/: django.mo  django.po
recurrence/locale/he/LC_MESSAGES/: django.mo  django.po
recurrence/locale/hu/LC_MESSAGES/: django.mo  django.po
recurrence/locale/it/LC_MESSAGES/: django.mo  django.po
recurrence/locale/nl/LC_MESSAGES/: django.mo  django.po
recurrence/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
recurrence/locale/sk/LC_MESSAGES/: django.mo  django.po
recurrence/static/recurrence/css/: recurrence.css
recurrence/static/recurrence/js/: recurrence-widget.init.js  recurrence-widget.js  recurrence.js
recurrence/templates/recurrence/: recurrence_widget.html
